--- a/A1/.vscode/settings.json
+++ b/A1/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cctype": "cpp",
     "clocale": "cpp",
     "cmath": "cpp",
+    "csetjmp": "cpp",
     "csignal": "cpp",
     "cstdarg": "cpp",
     "cstddef": "cpp",
@@ -16,6 +17,7 @@
     "array": "cpp",
     "atomic": "cpp",
     "strstream": "cpp",
+    "barrier": "cpp",
     "bit": "cpp",
     "*.tcc": "cpp",
     "bitset": "cpp",
@@ -30,6 +32,7 @@
     "condition_variable": "cpp",
     "coroutine": "cpp",
     "cstdint": "cpp",
+    "cuchar": "cpp",
     "deque": "cpp",
     "forward_list": "cpp",
     "list": "cpp",
@@ -40,6 +43,7 @@
     "unordered_set": "cpp",
     "vector": "cpp",
     "exception": "cpp",
+    "expected": "cpp",
     "algorithm": "cpp",
     "functional": "cpp",
     "iterator": "cpp",
@@ -49,6 +53,7 @@
     "optional": "cpp",
     "random": "cpp",
     "ratio": "cpp",
+    "regex": "cpp",
     "source_location": "cpp",
     "string_view": "cpp",
     "system_error": "cpp",
@@ -63,19 +68,25 @@
     "iosfwd": "cpp",
     "iostream": "cpp",
     "istream": "cpp",
+    "latch": "cpp",
     "limits": "cpp",
     "mutex": "cpp",
     "new": "cpp",
     "numbers": "cpp",
     "ostream": "cpp",
+    "ranges": "cpp",
+    "scoped_allocator": "cpp",
     "semaphore": "cpp",
     "shared_mutex": "cpp",
     "span": "cpp",
+    "spanstream": "cpp",
     "sstream": "cpp",
+    "stacktrace": "cpp",
     "stdexcept": "cpp",
     "stdfloat": "cpp",
     "stop_token": "cpp",
     "streambuf": "cpp",
+    "syncstream": "cpp",
     "thread": "cpp",
     "typeindex": "cpp",
     "typeinfo": "cpp",
